[package]
name = "raydium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1.0.72"
eframe = "0.22.0"
env_logger = "0.10.0"
iced = "0.10.0"
image = "0.24.6"
log = "0.4.19"
rand = "0.8.5"
rayon = "1.7.0"
sdl2 = "0.35.2"
tokio = "1.29.1"

