[package]
name = "raydium"
version = "0.1.0"
edition = "2021"

[lib]
name = "rad"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
eframe = "0.22.0"
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.19"
poll-promise = "0.2.0"
rand = "0.8.5"
rayon = "1.7.0"
tokio = "1.29.1"

